--- a/.github/workflows/rss-feed-action.yml
+++ b/.github/workflows/rss-feed-action.yml
@@ -1,8 +1,8 @@
-name: RSS Feed Action
+name: RSS to Notion Feed Action
 
 on:
   schedule:
-    - cron: '0 0 * * *'  # Corrected cron schedule for daily at midnight UTC
+    - cron: '0 0 * * *'  # Runs daily at midnight UTC
   workflow_dispatch:
 
 jobs:
@@ -11,9 +11,10 @@ jobs:
 
     steps:
       - name: Checkout code
-        uses: actions/checkout@v4  # Updated to latest version
+        uses: actions/checkout@v4
 
-      - name: Run RSS Feed Action
-        uses: ./ 
-        with:
-          feeds_file: 'feeds.yml'
+      - name: Run RSS to Notion Action
+        uses: ./
+        env:
+          NOTION_KEY: ${{ secrets.NOTION_KEY }}
+          NOTION_DATABASE_ID: ${{ secrets.NOTION_DATABASE_ID }}
